main - f57a99a test: add integration test for component benchmark rule

--- a/bazel/benchmark/component_benchmark/defaults/index-template.html
+++ b/bazel/benchmark/component_benchmark/defaults/index-template.html
@@ -9,6 +9,6 @@
   </head>
   <body>
     <app-root id="root">Loading...</app-root>
-    <script src="/app_bundle.js"></script>
+    <script type="module" src="./{bundle_target_name}.min.js"></script>
   </body>
 </html>
